2005-02-14  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_config.c
	(_cerebrod_pre_calculate_configuration_config_check): Add
	listen_threads check.

	* src/cerebrod/cerebrod.c (main): Launch listen threads
	appropriately.

	* src/cerebrod/cerebrod_config.c
	(_cerebrod_calculate_configuration): Calculate destination ip
	inaddr in both listener and speaker mode.

	* src/cerebrod/cerebrod_speaker.c
	(_cerebrod_speaker_create_and_setup_socket),
	src/cerebrod/cerebrod_listener.c
	(_cerebrod_listener_create_and_setup_socket): Add memsets to
	ensure correct settings.

	* src/cerebrod/cerebrod_listener.c (cerebrod_listener): Fix buffer
	input error.
	
	* src/cerebrod/cerebrod_config.h, src/cerebrod/cerebrod_config.c,
	src/cerebrod/cerebrod_speaker.c, src/cerebrod_listener.c: Globally
	rename heartbeat_in_addr to heartbeat_network_interface_in_addr.
	Globally rename destination_in_addr to destination_ip_in_addr.
	
2005-02-09  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_listener.h,
	src/cerebrod/cerebrod_listener.c: Completed basic listener
	functionality.  Added rehashing of hash when hash is too large.
	Added cluster_node_data_hash debugging.

	* src/libcommon/wrappers.h, src/libcommon/wrappers.c: Added
	various hashing wrappers.

	* src/cerebrod/cerebrod_config.c: Added additional checks on
	unicast and listener.
	
2005-02-03  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_config.h, src/cerebrod_config.c: Renamed
	speak_ttl to heartbeat_ttl and merged two network interface
	configurations into one.

	* src/cerebrod/cerebrod_speaker.c,
	src/cerebrod/cerebrod_listener.c: Adjust to configuration changes.
	
2005-02-02  Albert Chu  <chu11@llnl.gov>

	* cerebro.spec.in: Fix rpm build problem.
	
2005-02-01  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_config.h, src/cerebrod/cerebrod_config.c:
	Support listen_on_network_interface configuration and
	configuration calculation.  Fix configuration check corner cases.
